@@ -86,8 +86,7 @@ repos:
         types: [python]
         args: []
         require_serial: true
-        additional_dependencies:
-          ["platformdirs==2.2.0", "types-pkg_resources==0.1.3", "types-toml==0.1.3"]
+        additional_dependencies: ["platformdirs==2.2.0", "types-pkg_resources==0.1.3"]
         exclude: tests/functional/|tests/input|tests(/.*)*/data|tests/regrtest_data/|tests/data/|tests(/.*)+/conftest.py|doc/|bin/
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.5.1
