@@ -3,17 +3,20 @@
 
 import configparser
 import os
+import sys
 from typing import Iterator, Optional
 
-import toml
-from toml import TomlDecodeError
+if sys.version_info >= (3, 11):
+    import tomllib
+else:
+    import tomli as tomllib
 
 
 def _toml_has_config(path):
-    with open(path, encoding="utf-8") as toml_handle:
+    with open(path, mode="r+b") as toml_handle:
         try:
-            content = toml.load(toml_handle)
-        except TomlDecodeError as error:
+            content = tomllib.load(toml_handle)
+        except tomllib.TOMLDecodeError as error:
             print(f"Failed to load '{path}': {error}")
             return False
 
