@@ -10,4 +10,3 @@ pytest-profiling~=1.7
 pytest-xdist~=2.5
 # Type packages for mypy
 types-pkg_resources==0.1.3
-types-toml==0.10.4
