@@ -51,7 +51,7 @@ install_requires =
     astroid>=2.9.2,<=2.10.0-dev0
     isort>=4.2.5,<6
     mccabe>=0.6,<0.7
-    toml>=0.9.2
+    tomli>=2.0; python_version<"3.11"
     colorama;sys_platform=="win32"
     typing-extensions>=3.10.0;python_version<"3.10"
 python_requires = >=3.6.2
@@ -123,9 +123,6 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-_string]
-ignore_missing_imports = True
-
-[mypy-toml.decoder]
 ignore_missing_imports = True
 
 [mypy-git.*]
